2010-04-08 Philipp Klaus Krause <pkk AT spth.de>
	* support/regression/tests/bug-2982135.c:
	  Fixed a stupid mistake.

2010-04-08 Borut Razem <borut.razem AT siol.net>

	* support/regressuin/test/bitvars.c:
	  fixed failing test on on Solaris i386 SunPro C compiler;
	  it behaves differently if -xO2 option is set or not
	* src/SDCCast.c, src/SDCCast.h:
	  fixed SunPro C warning: anonymous struct declaration
	* device/include/mcs51/C8051F336.h, device/include/mcs51/C8051T610.h,
	  device/include/mcs51/p89lpc938.h, device/include/mcs51/C8051F920.h,
	  device/include/mcs51/C8051T600.h, device/include/mcs51/C8051T630.h,
	  sdcc/device/include/hc08/mc68hc908qy.h, device/include/hc08/mc68hc908gp32.h:
	  sdcc library license changed to GPL+LE
	* support/regression/ports/host/spec.mk.in: removed unneeded include
	* sim/ucsim/cmd.src/Makefile.in:
	  sh test doesn't understand -e option
	* sim/ucsim/cmd.src/FlexLexer.h:
	  fixed warning about missing newline at last line

2010-04-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/ralloc.c,
	  support/regression/tests/bug-2982135.c:
	  Fixed bug #2982135.

2010-04-06 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  src/z80/peeph-z80.def
	  Minor improvements, workaround for bug #2970351.
	* device/lib/z80/divunsigned.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/div.s,
	  device/lib/z80/divmixed.s
	  device/lib/z80/divsigned.s:
	  Division library reorganization.

2010-04-05 Borut Razem <borut.razem AT siol.net>

	* sdcc/sim/ucsim/gui.src/Makefile.in:
	  fixed for Solaris if CURSES_PKGS is empty
	* sdcc/device/include/mcs51/at89c51snd1c.h:
	  sdcc library license changed to GPL+LE

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* device/include/hc08/mc68hc908jb8.h:
	  sdcc library license changed to GPL+LE
	* sdas/linksrc/Makefile.in: Solaris make (GNU Make 3.81) doesn't like
	  $$() syntax; converted to ``

2010-04-03 Borut Razem <borut.razem AT siol.net>
